# excalidrauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: Dialog.tsx  ExcalidrawCanvas.test.tsx  ExcalidrawCanvas.tsx  IconPicker.tsx  Sidebar.test.tsx  Sidebar.tsx
src/hooks/: useTauriFS.test.ts  useTauriFS.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: fileTree.test.ts  fileTree.ts
