[package]
name = "excalidrauri"
version = "0.1.0"
description = "Excalidraw with Tauri and folder management"
authors = ["nnao45"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "excalidrauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "excalidrauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
